--- a/talks.html
+++ b/talks.html
@@ -148,17 +148,18 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
                  <div class="row timeline-element reverse separline">
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">September 4, 2020&nbsp;</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5">July 31, 2020&nbsp;</p>
                     </div>
                 </div>
            <span class="iconBackground"></span>
             <div class="col-xs-12 col-md-6 align-right">
                 <div class="timeline-text-content">
-                    <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">The What, Why & How of Data Science Internships</h4>
-                    <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Overview</strong> : Discussion on my views about what are the requirements of Data Science Internships, How to bag one & what are my biggest learnings as an intern.
+                    <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Global AI Fest: Virtual Artificial Intelligence and Machine Learning Conference 2020</h4>
+                    <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Topic</strong> : Finding the best solution for Image Processing
+                    <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Overview</strong> : Discussed about how to find best solution for Image processing, different research papers submitted for these matters and some implementations for the same as well.
                     <br>
-                   <br><strong>Venue</strong> : &nbsp; Online ( Webinar by HackGujarat ) <br>
-                   <br><a href="" class="text-secondary"><strong>Meetup  Recording Link ( To be Updated )</strong></a> 
+                   <br><strong>Venue</strong> : &nbsp; Online ( Conference by Azure AI ) <br>
+                   <br><a href="" class="text-secondary"><strong>Conference  Recording Link ( To be Updated )</strong></a> 
                    <br><br><a href="" class="text-secondary"><strong>Slides ( To be Updated )</strong></a></p><p></p>
               </div>
             </div>
@@ -170,17 +171,17 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
             <div class="row timeline-element  separline">
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">August 27, 2020&nbsp;</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5">June 19, 2020&nbsp;</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Flagging off your journey in Machine Learning</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"></p><p><strong>Overview</strong> : Presenting my tips & tricks on how a beginner can start ML, AI, Data Science along with doing self projects & becoming Industry Ready.
-<br>
-<br><strong>Venue</strong> : &nbsp; Online ( Webinar by HakinCodes ) <br>
-<br><a href="https://www.youtube.com/watch?v=CWiu9tlwHEg&feature=youtu.be" class="text-secondary"><strong>Webinar Recording Link</strong></a></p><p></p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">INTERNATIONAL CONFERENCE ON INTELLIGENT ENGINEERING AND MANAGEMENT:</h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Topic</strong> : Novel XGBoost Tuned Machine Learning Model for Software Bug Prediction(research paper talk)
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"></p><p><strong>Overview</strong> : Presented my research paper, where we have created a tuned xgboost classification machine learning algorithm for software bug prediction.
+<br><strong>Venue</strong> : &nbsp; Online ( Conference by  Amity,London,UK ) <br>
+<br><a href="https://amity.edu/iciem/" class="text-secondary"><strong>conference link</strong></a></p><p></p>
 <br><a href="https://ayonroy.ml/27082020.pdf" class="text-secondary"><strong>Get the Slides here</strong></a></p><p></p>
                     </div>
                 </div>
