removing no copyright

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ mailto:ayon.roy2000@gmail.com?subject=Interested%20to%20view%20your%20resume.&bo
   </div>
     </div>
   <div class="footer">
-<i>No © issues, as we are in 2020</i>
+<i>© issues</i>
 <br><br>
   <div>
 
