adding experience at tookitaki

--- a/experience.html
+++ b/experience.html
@@ -121,7 +121,35 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
     </h3>
     <div class="col-md-10 testimonials-container"> 
       
-
+    <div class="testimonials-item">
+        <div class="user row">
+          <div class="col-lg-3 col-md-4">
+            <div class="user_image">
+              <img src="assets/images/tookitaki.jpeg" alt="" title="">
+            </div>
+          </div>
+          <div class="testimonials-caption col-lg-9 col-md-8">
+            <div class="user_text ">
+              <p class="mbr-fonts-style  display-7">
+                  Anti-Money Laundering & Fraud Detection using Machine Learning:
+                  § Developed an end-to-end solution utilizing scalable and high-performance predictive analytics/machine learning algorithms to build models for tracking fraudulent accounts and transactions in financial institutions.
+                  * Data Preparation (K-fold sampling, time-series transformations, binning etc.)
+                  * Feature Engineering and Variable Selection (including single variable analysis)
+                  * Logistic Regression (Single-factor, Backward, Ultra-Fast Backward)
+                  * Decision Tree and Random Forest
+                  * Naïve Bayes Classifier
+                  * Neural Networks
+                  * Ensemble Models
+                  * Driver Analysis
+              </p>
+            </div>
+            <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">
+                 Data Scientist <span style="font-weight: normal;">@ Tookitaki ai</span></div>
+            <div class="user_desk mbr-light mbr-fonts-style align-left pt-2 display-7">
+                Novemner 2020 - Present ( Bangalore, India )</div>
+          </div>
+        </div>
+      </div>
       
     <div class="testimonials-item">
         <div class="user row">
@@ -140,7 +168,7 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
             <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">
                  Data Scientist <span style="font-weight: normal;">@ Knoldus Inc</span></div>
             <div class="user_desk mbr-light mbr-fonts-style align-left pt-2 display-7">
-                July 2019 - Present ( Noida, India )</div>
+                July 2019 - October 2020 ( Noida, India )</div>
           </div>
         </div>
       </div>
