--- a/experience.html
+++ b/experience.html
@@ -132,7 +132,7 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
             <div class="user_text ">
               <p class="mbr-fonts-style  display-7">
                   Anti-Money Laundering & Fraud Detection using Machine Learning:
-                  § Developed an end-to-end solution utilizing scalable and high-performance predictive analytics/machine learning algorithms to build models for tracking fraudulent accounts and transactions in financial institutions.
+                  § Developing an end-to-end solution utilizing scalable and high-performance predictive analytics/machine learning algorithms to build models for tracking fraudulent accounts and transactions in financial institutions.
                   * Data Preparation (K-fold sampling, time-series transformations, binning etc.)
                   * Feature Engineering and Variable Selection (including single variable analysis)
                   * Logistic Regression (Single-factor, Backward, Ultra-Fast Backward)
