--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5">
-<div></div><div>Shubham Goyal is a Data Scientist at MachineX Intelligence and Knolduc Inc. With this, he is an artificial Intelligence Researcher, interested in doing research on different domain problems and a regular contributor to society through blogs and webinars in machine learning and artificial intelligence. He had also written a few research papers on machine learning. Moreover, a conference speaker.<br> Keep reading below.</br>  </div></div>
+<div></div><div>Shubham Goyal is a Data Scientist at Tookitaki. With this, he is an artificial Intelligence Researcher, interested in doing research on different domain problems and a regular contributor to society through blogs and webinars in machine learning and artificial intelligence. He had also written a few research papers on machine learning. Moreover, a conference speaker.<br> Keep reading below.</br>  </div></div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
@@ -278,7 +278,7 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">My daily work in a Hashtag</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">Data Scientist at Knoldus Inc || AI Specialist || Data science || Machine Learning</p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">#AiInnovator</p>
                     </div>
                 </div>
             </div>
