--- a/skills.html
+++ b/skills.html
@@ -220,7 +220,7 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
                     <span class="mbr-iconfont mbri-photos"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-5">Computer Vision</h4>
+                    <h4 class="card-title py-3 mbr-fonts-style display-5">Anti-Money Laundering, Fraud Detection</h4>
                     
                 </div>
             </div>
