adding talk section and bug fixes

--- a/experience.html
+++ b/experience.html
@@ -252,7 +252,7 @@ My role, as an Upgrad Xpert (For Post-Graduate Diploma in Machine Learning and D
                         <img src="assets/images/background4.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box p-5">
-                        <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5">Speaker at various technical conferences, meetups. View my talks <a href="https://ayonroy.ml/talks.html" class="text-success">here</a>.</h4>
+                        <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5">Speaker at various technical conferences, meetups. View my talks <a href="talks.html" class="text-success">here</a>.</h4>
                         
                     </div>
                 </div>
