add preview image

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/SG.jpeg" type="image/x-icon">
   <meta name="description" content="Shubham Goyal`s Tiny World on Web">
+  <meta property="og:image" content="assets/images/shubham1.png" />
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   
   <style type "text/css">
