replace resume and formatting experience

--- a/experience.html
+++ b/experience.html
@@ -132,15 +132,15 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
             <div class="user_text ">
               <p class="mbr-fonts-style  display-7">
                   Anti-Money Laundering & Fraud Detection using Machine Learning:
-                  § Developing an end-to-end solution utilizing scalable and high-performance predictive analytics/machine learning algorithms to build models for tracking fraudulent accounts and transactions in financial institutions.
-                  * Data Preparation (K-fold sampling, time-series transformations, binning etc.)
-                  * Feature Engineering and Variable Selection (including single variable analysis)
-                  * Logistic Regression (Single-factor, Backward, Ultra-Fast Backward)
-                  * Decision Tree and Random Forest
-                  * Naïve Bayes Classifier
-                  * Neural Networks
-                  * Ensemble Models
-                  * Driver Analysis
+                  <br>§ Developing an end-to-end solution utilizing scalable and high-performance predictive analytics/machine learning algorithms to build models for tracking fraudulent accounts and transactions in financial institutions.
+                  <br>* Data Preparation (K-fold sampling, time-series transformations, binning etc.)
+                  <br>* Feature Engineering and Variable Selection (including single variable analysis)
+                  <br>* Logistic Regression (Single-factor, Backward, Ultra-Fast Backward)
+                  <br>* Decision Tree and Random Forest
+                  <br>* Naïve Bayes Classifier
+                  <br>* Neural Networks
+                  <br>* Ensemble Models
+                  <br>* Driver Analysis
               </p>
             </div>
             <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">
