Adding changes for new job and other pages

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ else if (geek) {
   Message me, maybe we could help each other.
 }
 else {
-  goto: ayonroy.ml
+  goto:
 }
 ________________________________________________________________________________________
 
@@ -39,7 +39,7 @@ ________________________________________________________________________________
 
 Cheers,
 Shubham Goyal
-mailto: ayonroy2000@gmail.com
+mailto: shubhamgoyal769@gmail.com
 ________________________________________________________________________________________
 
 I sincerely admit ! Not everything thing you saw on the website was developed by me from 
@@ -173,7 +173,7 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5">
-<div></div><div>Shubham Goyal is a Data Scientist at Tookitaki. With this, he is an artificial Intelligence Researcher, interested in doing research on different domain problems and a regular contributor to society through blogs and webinars in machine learning and artificial intelligence. He had also written a few research papers on machine learning. Moreover, a conference speaker.<br> Keep reading below.</br>  </div></div>
+<div></div><div>Shubham Goyal is a Data Scientist at Barclays bank, Creating cutting edge solutions for fighting against Financial crime and Anti-money laundering, interested in doing research on different domain problems and a regular contributor to society through blogs and webinars in machine learning and artificial intelligence. He had also written a few research papers on machine learning. Moreover, a conference speaker.<br> Keep reading below.</br>  </div></div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
@@ -308,7 +308,7 @@ SSSssshhhhh!! The code starts below , feel free to copy if you want -->
 <div>
 </div><div><strong>Want to discuss anything ?</strong></div><br><div><strong>
 </strong></div><div>
-</div><div>If you've any innovation project idea, or have crazy product ideas to discuss, always feel free to reach me via <a href="mailto:ayonroy2000@outlook.com" class="text-success">email here</a>&nbsp;or click <a href="contact.html" class="text-success">here</a>, Check out my resume <a href="https://ayonroy.ml/Shubham_Goyal_Resume.pdf" class="text-success">here</a> .  I'd be very happy to connect.&nbsp;</div></div>
+</div><div>If you've any innovation project idea, or have crazy product ideas to discuss, always feel free to reach me via <a href="mailto:shubhamgoyal769@gmail.com" class="text-success">email here</a>&nbsp;or click <a href="contact.html" class="text-success">here</a>, Check out my resume <a href="Shubham_Goyal_Resume.pdf" class="text-success">here</a> .  I'd be very happy to connect.&nbsp;</div></div>
             <hr class="line" style="width: 20%;">
         </div>
         </div>
